[package]
name = "wildflower"
version = "0.1.1"
edition = "2021"
description = "Wildcard matching against strings"
repository = "https://github.com/cassaundra/wildflower/"
license = "MIT"
keywords = ["wildcards", "no-std"]
categories = ["algorithms", "text-processing"]

[dependencies]

[features]
default = ["std"]

std = []
alloc = []
