[package]
name = "wildflower"
version = "0.3.0"
edition = "2021"
description = "Wildcard matching against strings"
repository = "https://github.com/cassaundra/wildflower/"
license = "MIT"
keywords = ["wildcards", "no-std"]
categories = ["algorithms", "text-processing"]

[dependencies]
stable_deref_trait = "1.2.0"
yoke = { version = "0.7.0", features = ["derive"] }

[features]
default = ["std"]

std = []
alloc = []
